--- a/kinh-nghiem/may-tinh/vi-dien-tu.html
+++ b/kinh-nghiem/may-tinh/vi-dien-tu.html
@@ -145,7 +145,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:right;padding-top:7px;padding-left:40px; }
 }
-
+.flleft { float:left; margin:0px 5px 0px 0px; width:45%; }
 </style>
 </head>
 
