--- a/kinh-nghiem/linh-tinh/nhiet-do.html
+++ b/kinh-nghiem/linh-tinh/nhiet-do.html
@@ -147,6 +147,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 }
 
 </style>
+<script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
 </head>
 
 <body>
