--- a/huu-ich/cau-chuyen/index.html
+++ b/huu-ich/cau-chuyen/index.html
@@ -170,8 +170,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
                 <span></span>
             </button>
-      <h3 class="myheader">Giới-thiệu</h3>
-    <a href='/'>Trang-bìa</a><br>
+      <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
     <a href='/home/about'>Thân-thế</a><br>
     <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
@@ -257,32 +256,18 @@ data-ad-slot="5275186684">
 
 <!-- body here -->
 <dl>
-  <dt><a href='bai-hoc-pho-thong.html'>Bài-học-phổ-thông</a></dt>
-  <dd>Những bài-học trong chương-trình phổ-thông cần được áp-dụng trong cuộc-sống hàng-ngày.</dd>
-  <dt><a href='nhung-hon-da.html'>Những hòn-đá</a></dt>
-  <dd>Bài-học về cách thu-xếp thời-gian cho nhiều việc cần-thiết trong cuộc-sống.</dd>
   <dt><a href='bat-dau-dau-tu.html'>Bắt-đầu đầu-tư</a></dt>
   <dd>Thời-điểm tốt-nhất để bắt-đầu đầu-tư là <b>ngay-bây-giờ</b>.</dd>
-  <dt><a href='uoc-mo-thanh-ti-phu.html'>Ước-mơ thành tỷ-phú</a></dt>
-  <dd>Mọi-người đều có-thể trở-thành tỷ-phú, sớm hay muộn.</dd>
   <dt><a href='nhung-quyet-dinh-tot-cho-tuoi-gia.html'>Những quyết-định tốt cho tuổi-già</a></dt>
   <dd>Nên làm theo bài-học này từ sớm.</dd>
   <dt><a href='nghi-huu-som.html'>Về-hưu trước 40 tuổi</a></dt>
   <dd>Một trường-hợp tự làm-giàu sớm một cách đơn-giản.</dd>
   <dt><a href='tranh-mang-no.html'>Tránh mang nợ</a></dt>
   <dd>Đừng chi-tiêu quá khả năng kiếm-tiền.</dd>
-  <dt><a href='dung-the-tin-dung-khon-ngoan.html'>Dùng thẻ-tín-dụng một cách khôn-ngoan</a></dt>
-  <dd>Thẻ-tín-dụng là một công-cụ đem lại tiện-nghi cho cuộc-sống nhưng người-dùng phải điều-khiển nó, đừng để nó điều-khiển.</dd>
   <dt><a href='mua-nha-hay-dau-tu.html'>Để tiền mua-nhà hay đầu-tư</a></dt>
   <dd>Một cách nhìn khác về việc tích-luỹ tài-sản.</dd>
-  <dt><a href='kakeibo.html'>Tiết-kiệm tiền kiểu Nhật</a></dt>
-  <dd>Người Nhật dùng công-cụ gì trong việc tiết-kiệm.</dd>
   <dt><a href='bot-lo-ve-tien.html'>6 điều giúp tôi bớt lo-lắng về tiền-bạc</a></dt>
   <dd>Không giàu-sang nhưng vẫn không quá lo-lắng về tiền-bạc.</dd>
-  <dt><a href='sinh-lao-benh-tu.html'>Sinh Lão Bệnh Tử</a></dt>
-  <dd>Điều gì đáng sợ hơn: Bệnh hay Tử?</dd>
-  <dt><a href='dang-thieng-lieng.html'>Sứ-giả của Đấng-Thiêng-Liêng</a></dt>
-  <dd>Một câu-chuyện không có thật nhưng cũng có bài-học trong đó.</dd>
 </dl>
   <hr>
 
