--- a/download/index.html
+++ b/download/index.html
@@ -325,7 +325,7 @@ Nhấn nút phải của chuột và chọn chép về để dùng.
 <td>213KB</td>
 </tr>
 <tr>
-<td><a href="Viet-Nam-Tu-Dien_Le-van-Duc_Le-ngoc-Tru_1970-1.pdf" target='_blank'>Việt Nam Tự Điển</a></td>
+<td><a href="https://lhboi.name.vn/download/Viet-Nam-Tu-Dien_Le-van-Duc_Le-ngoc-Tru_1970-1.pdf" target='_blank'>Việt Nam Tự Điển</a></td>
 <td>Việt Nam Tự Điển của Lê Văn Đức và Lê Ngọc Trụ</td>
 <td>267MB</td>
 </tr>
