--- a/home/cv.html
+++ b/home/cv.html
@@ -136,26 +136,25 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 .flright { float:right; margin:0px 0px 0px 5px; width:45%; }
 @media (max-width: 399px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:10px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
   .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
   .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
 }
 @media (min-width: 400px) and (max-width: 499px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:20px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
   .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
   .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
 }
 @media (min-width: 500px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:40px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
   .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
   .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
 }
 @media (min-width: 1260px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:40px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
   .leftads {position:absolute;top:0;left:0;height:100vh;width: calc((100% - 1020px)/2);margin:0;align:right;}
   .rightads {position:absolute;top:0;right:0;height:100vh;width: calc((100% - 1020px)/2);margin:0;}
 }
-
 </style>
 </head>
 
@@ -278,7 +277,31 @@ Biết dùng các phần mềm: OpenOffice, Borland, Microsoft C/C++, Motif Tool
   <p>Quản-lý-hệ-thống</p>
   <ul><li>Thiết-kế, thực-hiện, vận-hành hệ-thống-máy-tính của nhà-cung-cấp-dịch-vụ-Internet Netnam ở thành-phố-Hồ-Chí-Minh, Việt-Nam.</li></ul>
   <div class="indent"><i>Sử-dụng: Linux, Netfilter Iptables, traffic control, Squid, CacheFlow, MS Windows, MS SQL Server, Nortel CVX, Cisco router, ZyXEL DSLAM, Postfix, SpamAssassin, ClamAV.</i></div>
-
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
   <h3>Từ Tháng Mười Một năm 2002 đến Tháng Giêng năm 2003 <a href="https://www.globalcybersoft.com/" target="_blank">Global Cyber Soft</a>, Việt Nam</h3>
   <p>Trưởng-nhóm</p>
 
@@ -325,7 +348,31 @@ Biết dùng các phần mềm: OpenOffice, Borland, Microsoft C/C++, Motif Tool
     <li>Thiết-kế lại và nâng-cấp nhiều bộ-công-cụ-phân-tích-giao-thức, dùng để thu-thập và phân-tích thông-tin truyền trong đường-nối-tiếp (với các giao-thức X25 lớp 2 và 3, ISDN).</li>
     <li>Phát-triển thư-viện giao-tiếp với cổng-nối-tiếp.</li>
   </ul>
-
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
   <h2>Bằng-cấp &amp; Chứng-chỉ</h2>
   <h3>Tháng 1, 2014: Chứng-chỉ chương-trình <a href="https://lhboi.name.vn/huu-ich/tien-thuong-cuoi-nam">Bảo-hiểm Hưu-trí</a></h3>
   <h3>Tháng 6, 2012: Chứng-chỉ chương-trình <a href="https://lhboi.name.vn/huu-ich/cac-loai-bao-hiem/diem-tua-dau-tu">Bảo-hiểm Liên-kết Đầu-tư</a></h3>
