--- a/huu-ich/cac-loai-bao-hiem/index.html
+++ b/huu-ich/cac-loai-bao-hiem/index.html
@@ -135,22 +135,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 .flright { float:right; margin:0px 0px 0px 5px; width:45%; }
 @media (max-width: 399px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:10px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
   .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
   .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
 }
 @media (min-width: 400px) and (max-width: 499px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:20px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
   .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
   .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
 }
 @media (min-width: 500px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:40px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
   .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
   .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
 }
 @media (min-width: 1260px) {
-  .mbutton { display:inline;float:right;padding-top:7px;padding-left:40px; }
+  .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
   .leftads {position:absolute;top:0;left:0;height:100vh;width: calc((100% - 1020px)/2);margin:0;align:right;}
   .rightads {position:absolute;top:0;right:0;height:100vh;width: calc((100% - 1020px)/2);margin:0;}
 }
@@ -269,7 +269,31 @@ https://www.lhboi.name.vn/huu-ich/cac-loai-bao-hiem/
   </dl>
   <p>Và còn nhiều loại bảo hiểm khác nữa. Mục đích chung của mọi loại bảo hiểm đều là đối phó với rủi ro.
   </p>
-
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
   <h1>Rủi ro</h1>
   <p><span class="tmark">"Rủi ro là sự không chắc chắn có thể đo lường được."</span>
   <br><span class="tmark">'Không chắc chắn'</span> nghĩa là không thể biết trước việc đó xảy ra khi nào và ở đâu.
@@ -289,7 +313,31 @@ https://www.lhboi.name.vn/huu-ich/cac-loai-bao-hiem/
     <li>'không quan tâm', 'thôi kệ, tới đâu hay tới đó'.</li>
     <li>yên tâm rằng đã triệt tiêu hết tất cả các nguyên nhân gây hại, không còn rủi ro</li>
   </ul>
-
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
 
   <h1>Ý nghĩa của bảo hiểm</h1>
   <p>Về hình thức thì bảo hiểm là một thứ phí giống như phí giữ xe vậy. Ai sợ mất xe thì phải trả phí giữ xe. Ai <b>sợ mất tiền</b> thì trả phí bảo hiểm. Khi bị mất xe thì ta chỉ nhận được bồi thường ít hơn hoặc bằng giá trị chiếc xe, còn bảo hiểm có thể đền số tiền ta đang có và cả số tiền ta chưa có (tức là số tiền sẽ làm ra trong tương lai).
@@ -313,7 +361,31 @@ https://www.lhboi.name.vn/huu-ich/cac-loai-bao-hiem/
   </ul>
   <p>Tất nhiên là các công ty bảo hiểm sẽ không bán bảo hiểm cho khách hàng có nguy cơ gặp rủi ro cao, cũng giống như các công ty xổ số không bán vé số đã biết kết quả. Do đó, khi đã có một <a href="../ke-hoach-tai-chinh/">kế hoạch tài chính</a> cho gia đình thì hãy bảo vệ nó bằng bảo hiểm ngay; tham gia bảo hiểm càng sớm càng <a href="phi-bao-hiem-nhan-tho.html">tốn ít tiền</a>; đừng đợi đến khi cảm thấy có rủi ro đe doạ rồi mới tìm đến bảo hiểm, có thể lúc đó bạn sẽ sốc vì công ty bảo hiểm từ chối nhận tiền của bạn. Tôi đã thấy nhiều người quen bị công ty bảo hiểm từ chối nhận tiền.
   </p>
-
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
 
   <h2>Bảo hiểm cho người</h2>
   <p>Những <a href="https://lhboi.name.vn/huu-ich/cau-chuyen/sinh-lao-benh-tu">rủi ro liên quan đến thân thể</a> con người mà làm thiệt hại tài chính gia đình là:
@@ -340,7 +412,31 @@ https://www.lhboi.name.vn/huu-ich/cac-loai-bao-hiem/
   <br><b>Đối với những người khó giữ tiền</b>, tuy tiết kiệm bằng bảo hiểm nhân thọ thì lợi nhuận thấp hơn ngân hàng nhưng lại cho <span class="tmark">kết quả tốt hơn ngân hàng</span> vì tiết kiệm bằng bảo hiểm là việc tiết kiệm có kỷ luật: cứ đúng hạn là có người nhắc nộp tiền, không tiện rút ra trước hạn. Tiền ở trong bảo hiểm không định kỳ quay lại tay người chủ như sổ tiết kiệm nên ít bị chi tiêu bất chợt. Nhờ tính kỷ luật đó mà người tham gia bảo hiểm tránh được các cám dỗ tiêu dùng, đỡ quên nộp tiền vào ngân hàng, đỡ rút tiền khi bị khuyến mãi dụ dỗ. Nếu thu nhập của bạn đủ sống mà tài sản của bạn không tăng lên như đồ thị trong trang <a href="../tich-luy-4.html">Tích luỹ tài sản</a> thì bạn thuộc nhóm người khó giữ tiền, nhóm đó chiếm hơn 90% dân số Việt Nam.
   <br>Tóm lại, bảo hiểm nhân thọ là một cách tích luỹ tiền có kết quả chắc chắn, vượt qua những thất thoát kiểm soát được (cám dỗ tiêu dùng) cũng như không kiểm soát được (rủi ro).
   </p>
-
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
   <h3>Các loại bảo hiểm linh hoạt</h3>
   <p>Những sản phẩm bảo hiểm nhân thọ thiết kế theo kiểu truyền thống (kiểu cũ) thì <i>giá trị hoàn lại</i> gần bằng <i>số tiền bảo hiểm</i> làm cho người tham gia bảo hiểm bị <b>buộc</b> phải tiết kiệm tương đương với số tiền bảo hiểm rủi ro. Sản phẩm kiểu cũ cũng cố định về thời hạn hợp đồng, thời hạn đóng phí.
   <br>Về sau có những sản phẩm <a href="bhnt-lien-ket-chung.html">bảo hiểm nhân thọ liên kết chung</a>: <i><span class="tmark">linh hoạt</span></i> giữa hai mục đích bảo hiểm và tích luỹ, người tham gia bảo hiểm tự chọn số tiền bảo hiểm và giá trị hoàn lại khác nhau, tự quyết định thời hạn bảo hiểm, thời hạn đóng phí. Khách hàng có thể chọn số tiền bảo hiểm cao và giá trị hoàn lại thấp để đóng phí thấp, phần tiền tiết kiệm còn lại đem gửi vào chỗ nào có lãi suất cao và an toàn. Tất nhiên muốn được tối ưu như vậy thì khách hàng hoặc tư vấn viên tài chính phải thật hiểu về kế hoạch tài chính để chọn đúng kế hoạch <a href="../tich-luy.html">tích luỹ</a> và kế hoạch bảo hiểm sao cho <i>dù có rủi ro hay không thì gia đình vẫn có đủ số tiền vào lúc cần dùng đến</i>. Nghĩa là phải thực hiện song song hai kế hoạch để có cùng một kết quả như sản phẩm bảo hiểm truyền thống ở trên với số tiền bỏ ra ít hơn.
@@ -363,7 +459,31 @@ Các bài liên quan:
 <br>* <a href="../dau-tu-co-phieu/so-tk-hay-dau-tu.html">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132804613009051648" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376045612561053" rel="nofollow" target="_blank">Facebook</a>
   </div>
-
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
   <hr>
 
   <div class="footer">
