--- a/kinh-nghiem/may-tinh/index.html
+++ b/kinh-nghiem/may-tinh/index.html
@@ -243,6 +243,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <dt><a href='ham-tai-chinh.html'>Các phép-tính-tài-chính cần biết</a></dt>
   <dt><a href='googlemaps.html'>Kinh-nghiệm dùng Google Maps ở Việt-Nam</a></dt>
   <dt><a href='spam-call.html'>Chặn những cuộc-gọi-tiếp-thị</a></dt>
+  <dt><a href='spam'>Những cách chặn spam mail</a></dt>
   <dt><a href='raspberrypi'>RaspberryPi</a></dt>
   <dt><a href='toys'>Home server cũ</a></dt>
 </dl>
